--- a/java/micro-service/security/pom.xml
+++ b/java/micro-service/security/pom.xml
@@ -17,9 +17,16 @@
     <properties>
         <java.version>1.8</java.version>
         <bootstrap.version>4.5.0</bootstrap.version>
+        <passay.version>1.6.0</passay.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.passay</groupId>
+            <artifactId>passay</artifactId>
+            <version>${passay.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
