--- a/java/micro-service/pom.xml
+++ b/java/micro-service/pom.xml
@@ -12,6 +12,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <spring.boot.version>2.4.3</spring.boot.version>
         <spring.cloud.version>Greenwich.RELEASE</spring.cloud.version>
