--- a/java/micro-service/security/pom.xml
+++ b/java/micro-service/security/pom.xml
@@ -16,8 +16,11 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <bootstrap.version>4.5.0</bootstrap.version>
         <passay.version>1.6.0</passay.version>
+        <problem.version>0.26.1</problem.version>
     </properties>
 
     <dependencies>
@@ -25,6 +28,12 @@
             <groupId>org.passay</groupId>
             <artifactId>passay</artifactId>
             <version>${passay.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.zalando</groupId>
+            <artifactId>problem-spring-web</artifactId>
+            <version>${problem.version}</version>
         </dependency>
 
         <dependency>
