--- a/java/micro-service/security/src/main/resources/application.yml
+++ b/java/micro-service/security/src/main/resources/application.yml
@@ -18,6 +18,11 @@ spring:
   messages:
     basename: messages
     encoding: UTF-8
+    always-use-message-format: false
+    fallback-to-system-locale: true
+    use-code-as-default-message: false
+  mvc:
+    throw-exception-if-no-handler-found: true
   application:
     name: security
   security:
