--- a/java/micro-service/security/src/main/resources/application.yml
+++ b/java/micro-service/security/src/main/resources/application.yml
@@ -13,6 +13,10 @@ server:
     whitelabel:
       enabled: true
   port: 8080
+  servlet:
+    encoding:
+      charset: utf-8
+      force: true
 
 spring:
   messages:
