--- a/java/micro-service/security/src/main/resources/application.yml
+++ b/java/micro-service/security/src/main/resources/application.yml
@@ -29,8 +29,8 @@ spring:
     throw-exception-if-no-handler-found: true
   application:
     name: security
-  security:
-    user:
-      name: user
-      password: 123456
-      roles: USER,ADMIN
+#  security:
+#    user:
+#      name: user
+#      password: 123456
+#      roles: USER,ADMIN
