--- a/java/micro-service/security/src/main/resources/application.yml
+++ b/java/micro-service/security/src/main/resources/application.yml
@@ -1,10 +1,9 @@
 logging:
   level:
-    com:
-      imooc: DEBUG
     org:
       springframework:
         security: DEBUG
+        jdbc.core: TRACE
   pattern:
     console: '%clr(%d{E HH:mm:ss.SSS}){blue} %clr(%-5p) %clr(${PID}){faint} %clr(---){faint}
               %clr([%8.15t]){cyan} %clr(%-40.40logger{0}){blue} %clr(:){red} %clr(%m){faint}%n'
@@ -29,6 +28,23 @@ spring:
     throw-exception-if-no-handler-found: true
   application:
     name: security
+  datasource:
+    driver-class-name: org.h2.Driver
+    password: ''
+    url: jdbc:h2:mem:test;MODE=MySQL;DATABASE_TO_LOWER=TRUE;CASE_INSENSITIVE_IDENTIFIERS=TRUE;DB_CLOSE_DELAY=-1
+    username: sa
+    devtools:
+      livereload:
+        enabled: true
+      restart:
+        enabled: true
+    h2:
+      console:
+        enabled: true
+        path: /h2-console
+        settings:
+          trace: false
+          web-allow-others: false
 #  security:
 #    user:
 #      name: user
