--- a/java/micro-service/security/pom.xml
+++ b/java/micro-service/security/pom.xml
@@ -7,6 +7,7 @@
         <groupId>com.pain.yellow</groupId>
         <artifactId>micro-service</artifactId>
         <version>1.0</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>security</artifactId>
