--- a/java/micro-service/pom.xml
+++ b/java/micro-service/pom.xml
@@ -23,6 +23,7 @@
         <module>eureka-server</module>
         <module>eureka-client-provider</module>
         <module>eureka-client-consumer</module>
+        <module>dev-api</module>
     </modules>
 
     <dependencyManagement>
@@ -81,6 +82,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.1.0</version>
         </dependency>
     </dependencies>
 
