--- a/java/micro-service/dev-api/src/main/resources/application.yml
+++ b/java/micro-service/dev-api/src/main/resources/application.yml
@@ -22,3 +22,9 @@ server:
   tomcat:
     uri-encoding: UTF-8
   max-http-header-size: 80KB
+
+# mybatis mapper 配置
+mapper:
+  mappers: com.pain.yellow.api.mapper.ApiMapper
+  not-empty: false
+  identity: MySQL
