--- a/java/micro-service/eureka-client-consumer/src/main/resources/application.yml
+++ b/java/micro-service/eureka-client-consumer/src/main/resources/application.yml
@@ -8,6 +8,27 @@ eureka:
 spring:
   application:
     name: consumer
+  datasource:
+    type: com.zaxxer.hikari.HikariDataSource
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://cdh:3306/shop-dev?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
+    username: root
+    password: 123456
+    hikari:
+      connection-timeout: 30000
+      minimum-idle: 5
+      maximum-pool-size: 20
+      auto-commit: true
+      idle-timeout: 600000
+      pool-name: hikari
+      max-lifetime: 1800000
+      connection-test-query: SELECT 1
+ribbon:
+  MaxAutoRetries: 3
+
+provider:
+  ribbon:
+    MaxAutoRetries: 3
 
 logging:
   config: "classpath:logback.xml"
