--- a/java/micro-service/pom.xml
+++ b/java/micro-service/pom.xml
@@ -19,11 +19,12 @@
     </properties>
 
     <modules>
+        <module>common</module>
         <module>security</module>
         <module>eureka-server</module>
         <module>eureka-client-provider</module>
         <module>eureka-client-consumer</module>
-        <module>dev-api</module>
+        <module>app</module>
     </modules>
 
     <dependencyManagement>
@@ -111,6 +112,37 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+
     </dependencies>
+
+    <build>
+        <finalName>${project.artifactId}</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
