--- a/java/micro-service/pom.xml
+++ b/java/micro-service/pom.xml
@@ -16,6 +16,9 @@
         <java.version>1.8</java.version>
         <spring.boot.version>2.1.7.RELEASE</spring.boot.version>
         <spring.cloud.version>Greenwich.RELEASE</spring.cloud.version>
+        <commons.lang3.version>3.4</commons.lang3.version>
+        <lombok.version>1.18.10</lombok.version>
+        <joda.time.version>2.9.9</joda.time.version>
     </properties>
 
     <modules>
@@ -44,6 +47,24 @@
                 <version>${spring.cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons.lang3.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>${joda.time.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
