--- a/java/micro-service/pom.xml
+++ b/java/micro-service/pom.xml
@@ -14,16 +14,17 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <spring.boot.version>2.1.7.RELEASE</spring.boot.version>
-        <spring.cloud.version>Greenwich.RELEASE</spring.cloud.version>
+        <spring.boot.version>2.4.4</spring.boot.version>
+        <spring.cloud.version>2020.0.2</spring.cloud.version>
         <commons.lang3.version>3.4</commons.lang3.version>
         <lombok.version>1.18.10</lombok.version>
         <joda.time.version>2.9.9</joda.time.version>
+        <guava.version>29.0-jre</guava.version>
+        <passay.version>1.6.0</passay.version>
     </properties>
 
     <modules>
         <module>common</module>
-        <module>security</module>
         <module>eureka-server</module>
         <module>eureka-client-provider</module>
         <module>eureka-client-consumer</module>
@@ -65,6 +66,18 @@
                 <groupId>joda-time</groupId>
                 <artifactId>joda-time</artifactId>
                 <version>${joda.time.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.passay</groupId>
+                <artifactId>passay</artifactId>
+                <version>${passay.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -140,30 +153,10 @@
         </dependency>
 
         <dependency>
-            <groupId>org.mongodb</groupId>
-            <artifactId>mongodb-driver</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
 
     </dependencies>
-
-    <build>
-        <finalName>${project.artifactId}</finalName>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
