feat: book 列表分页

--- a/whale/wiki/pom.xml
+++ b/whale/wiki/pom.xml
@@ -19,6 +19,17 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.pain.blue</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.13</version>
+        </dependency>
     </dependencies>
 
     <build>
