--- a/whale/wiki/src/main/resources/config/application.yml
+++ b/whale/wiki/src/main/resources/config/application.yml
@@ -16,6 +16,10 @@ spring:
       pool-name: hikari
       max-lifetime: 1800000
       connection-test-query: SELECT 1
+  redis:
+    host: cdh
+    port: 6379
+    password: 123456
 mybatis:
   mapper-locations: classpath:/mapper/*.xml
 
